# bbl-devfest-2026-fastapi

./: .env.example  CLAUDE.md  README.md  auth.py  config.py  database.py  main.py  pyproject.toml
routers/: api.py  web.py
static/: main.js  style.css
templates/: index.html
templates/partials/: booking_list.html  bookings.html  echo.html  echo_result.html  item_list.html  items.html  login.html
tests/: conftest.py  test_bookings.py
